final setting mark 1

--- a/HTML/project03.html
+++ b/HTML/project03.html
@@ -92,7 +92,7 @@
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><div class="before-span"><span data-hover="About">About</span></div></a></li>
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Contact">Contact</span></div></a></li>
-                                    <li class="menu-timeline buy-item"><a target="_blank" class="link " href="https://themeforest.net/user/clapat/portfolio"><div class="before-span"><span data-hover="Buy Now">Buy Now</span></div></a></li>
+                                    
                                 </ul>            
                             </div>
                         </div> 
@@ -375,7 +375,7 @@
                         
                         <div class="socials-wrap">            	
                             <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-                            <div class="socials-text">Follow Us</div>
+                            <div class="socials-text">Follow Me</div>
                             <ul class="socials">
                                 <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/clapat" target="_blank">Db</a></span></li>
                                 <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
