--- a/HTML/project04.html
+++ b/HTML/project04.html
@@ -345,7 +345,7 @@
                         
                         <div class="socials-wrap">            	
                             <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-                            <div class="socials-text">Follow Us</div>
+                            <div class="socials-text">Follow Me</div>
                             <ul class="socials">
                                 <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/clapat" target="_blank">Db</a></span></li>
                                 <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
