--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,7 +15,7 @@
     <title>Liam Donaldson Portfolio 2021</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Advanced Graphic Design Portfolio" />
-    <meta name="author" content="ClaPat Studio">
+    <meta name="author" content="Liam Donaldson">
     <meta charset="UTF-8" />    
     <link rel="icon" type="image/ico" href="images/Donall.developer Logo V.2.0.png" />
     <link href="style.css" rel="stylesheet" />
@@ -356,7 +356,7 @@
         <div id="ball">
         	<div id="ball-drag"></div>
         	<div id="ball-loader"></div>
-        </div>
+        </div> 
     </div>
     <div id="clone-image"></div>
     <div id="rotate-device"></div>
