--- a/HTML/project02.html
+++ b/HTML/project02.html
@@ -12,7 +12,7 @@
 		ga('send', 'pageview');
 	</script>
     
-    <title>Colega - Creative Showcase Portfolio Template</title>
+    <title>Liam Donaldson Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Magazine Cover Design" />
     <meta name="author" content="ClaPat Studio">
