--- a/project01.html
+++ b/project01.html
@@ -161,10 +161,10 @@
                     </div>
                     <div id="hero-image-wrapper">
                     	<div id="hero-background-layer" class="parallax-scroll-effect">
-                            <div id="hero-bg-image" style="background-image:url(images/tb\ cover.jpg)"></div>
+                            <div id="hero-bg-image" style="background-image:url(images/Book\ Cover\ image.png)"></div>
                         </div>
                     </div>                        
-                    <!--/Hero Section -->   
+                    <!--/Hero Section -->  
                          
                     
                     <!-- Main Content -->
