--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <div class="swiper-slide" data-slide="01">                                            
                                                 <div class="img-mask">
                                                     <div class="section-image"><img src="images/Book Cover image.png" class="item-image grid__item-img" alt=""></div>                                                
-                                                    <img class="grid__item-img grid__item-img--large" src="images/book cover smaller.jpg" />                              
+                                                    <img class="grid__item-img grid__item-img--large" src="images/Book Cover image.png" />                              
                                                 </div>
                                                 <div class="move-caption">
                                                     <div class="outer">                            
