--- a/project02.html
+++ b/project02.html
@@ -161,7 +161,7 @@
                     </div>
                     <div id="hero-image-wrapper">
                     	<div id="hero-background-layer" class="parallax-scroll-effect">
-                            <div id="hero-bg-image" style="background-image:url(images/pancake\ cover.png)"></div>
+                            <div id="hero-bg-image" style="background-image:url(images/Magazine\ 2021\ cover.png)"></div>
                         </div>
                     </div>                        
                     <!--/Hero Section -->   
